# game-state

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  glossary.rst  guide.rst  index.rst
docs/source/api/: async_state.rst  async_state_manager.rst  exceptions.rst  state.rst  state_manager.rst  utils.rst  version_info.rst
docs/source/guide/: auto_state_loading.rst  demo.rst  eager_lazy_loading.rst  getting_started.rst  state_args.rst  state_hooks.rst
docs/source/lib_guide/: getting_started.rst
examples/: auto_loading.py  basic_manager.py  custom_manager.py  custom_state.py  lazy_state_example.py  pyproject.toml  state_args.py
examples/state_hooks/: base_state.py  game.py  main.py  menu.py  screen_1.py  screen_2.py
examples/state_hooks/states/: game.py  main_menu.py
src/game_state/: __init__.py  errors.py  generics.py  manager.py  state.py  utils.py
src/game_state/async_machine/: __init__.py  manager.py  state.py
src/game_state/sync_machine/: __init__.py  manager.py  state.py
tests/: test_hooks.py  test_lazy_states.py  test_manager.py  test_state.py  test_state_args.py
tests/test_async/: test_hooks.py  test_lazy_states.py  test_manager.py  test_state.py  test_state_args.py
tests/test_async/test_hooks_states/: hook_1.py  hook_2.py  hook_3.py
tests/test_hooks_states/: hook_1.py  hook_2.py  hook_3.py
tests/test_sync/: test_hooks.py  test_lazy_states.py  test_manager.py  test_overlay.py  test_state_args.py
tests/test_sync/test_hooks_states/: hook_1.py  hook_2.py  hook_3.py
