[project]
name = "game-state"
version = "0.1"
authors = [
  { name="Jiggly Balls", email="jigglyballs9000@gmail.com" },
]
description = "A pygame utility package that allows you to handle different screens in an organized manner."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: pygame",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/Jiggly-Ball/Game-State"
Issues = "https://github.com/Jiggly-Ball/Game-State/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"